tests/baselines/reference/recursiveSpecializationOfSignatures.errors.txt
tests/cases/compiler/recursiveSpecializationOfSignatures.ts(2,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/recursiveSpecializationOfSignatures.ts (1 errors) ====
    class S0<B, A> {
    set S1(S2: S0<any,any>) {
        ~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    constructor(public S17: S0<any, (S18) => A>) { }
    }
    